Feat: 네이버 지도 설치

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
     "plugin:prettier/recommended"
   ],
   "ignorePatterns": ["**/build/**/*.*", "node_modules", ".pnp.*"],
+  "globals": {
+    "naver": "writable"
+  },
   "rules": {
     "import/prefer-default-export": 0, // 0 -> 0ff / 1 -> on (default)
     "import/no-cycle": 0,
