--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/navermaps": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-naver-maps": "^0.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1"
   },
