--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-naver-maps": "^0.1.2",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
