--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
