--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "shortid": "^2.2.16"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.25",
-    "dayjs": "^1.11.9",
     "eslint": "^8.28.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
